deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walias
  annotations:
    kubernetes.io/ingress.class: shared
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: traefik.codemowers.ee
spec:
  rules:
    - host: walias-msergo.codemowers.ee
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: walias
                port:
                  number: 3030
  tls:
    - hosts:
        - "*.codemowers.ee"

---
apiVersion: v1
kind: Service
metadata:
  name: walias
spec:
  type: ClusterIP
  selector:
    app: walias
  ports:
    - protocol: TCP
      port: 3030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walias
  labels:
    app: walias
spec:
  selector:
    matchLabels:
      app: walias
  replicas: 1
  template:
    metadata:
      labels:
        app: walias
    spec:
      containers:
        - name: walias
          image: walias
          ports:
            - containerPort: 3030
